--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-highlight">ASIM'S</span> WORLD</h1>
-    <h3>About Myself</h3>
-    <p>I am a profeshional web developer,I like to create a profeshional website for you and your business.If you create a profeshional website to drop a mail .....</p>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-highlight">ASIM'S</span> WORLD</h1>
+            <h3>About Myself</h3>
+            <p>I am a profeshional web developer,I like to create a profeshional website for you and your business.If you create a profeshional website to drop a mail Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, repellendus......</p>
+            <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+
+    </section>
     
 </body>
 </html>
