complate portfolio web

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">ASIM'S</span> WORLD</h1>
+            <h1><span class="orange-highlight">ASIM'S</span> WORLD</h1>
             <h3>About Myself</h3>
             <p>I am a profeshional web developer,I like to create a profeshional website for you and your business.If you create a profeshional website to drop a mail Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, repellendus......</p>
             <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Hire Me</a>
@@ -23,6 +23,37 @@
         </div>
 
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become World's No.1 professional web Dev</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores eum excepturi consectetur porro reprehenderit, fugit, nihil quas ratione obcaecati reiciendis voluptates corporis nobis odit. Molestias rerum est dolor consectetur consequuntur dolores distinctio harum dolore facilis aliquid. Rerum eveniet quod fugit?</p>
+            <a class="link-button" href=>Download CV</a>
+
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-highlight">2021-Present |pro level Web Dev</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta tenetur, alias esse, qui quasi consectetur dolor repudiandae officiis maiores optio cupiditate adipisci debitis eius aperiam corrupti eligendi omnis facere.</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Dev</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Larner</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni excepturi, similique sint fugit, est mollitia quod ut architecto doloremque sit debitis, repudiandae nulla. Laboriosam, ex provident illo laborum tempora dolor.</p>
+
+        </div>
+    </section>
+    <footer>
+        <p>All Right Reserved@ Asim-Das</p>
+    </footer>
     
 </body>
 </html>
